# Artemis2-METAxSST

./: .gitignore  Dockerfile  README.md  data.py  env.py  evaluate.py  experiments.py  inference.py  metrics.py  openenv.yaml  output.txt  policies.py  pyproject.toml  requirements.txt  reward.py  run_all_experiments.py  run_demo.py  visualize.py
env/: __init__.py  environment.py  models.py  reward.py  tasks.py
output/: experiment_results.json
server/: app.py
tests/: test_env.py
