[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "preference-aggregation-env"
version = "2.0.0"
description = "OpenEnv environment: RLHF preference aggregation failure simulator"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "openai>=1.0.0",
    "PyYAML>=6.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"
serve = "server.app:main"

[project.optional-dependencies]
dev = []

[tool.setuptools.packages.find]
include = ["env*", "server*"]
